# ChelseaKR_gtfs-scorecard

./: .gitignore  .gitleaks.toml  .pa11yci.json  .pre-commit-config.yaml  .semgrepignore  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  action.yml  lighthouserc.json  renovate.json  rollups.yaml  server.json  subscriptions.yaml
pipeline/: pyproject.toml
pipeline/scripts/: build_national_pmtiles.py  check_contrast.py  check_readability.py
pipeline/src/scorecard_pipeline/: __init__.py  _stats.py  access.py  accessibility.py  adoption.py  agencies.py  alerts.py  anomaly.py  atomfeed.py  autofix.py  badge.py  cadence.py  canary.py  cemv.py  cimd.py  cli.py  completeness.py  config.py  conformance.py  constants_export.py  dataset.py  directory.py  effort_calibration.py  equity.py  fares.py  feedapi.py  feeddiff.py  fetch.py  findings_national.py  fixlog.py  flex.py  gbfs.py  geo.py  google_gate.py  gtfs.py  lint.py  liveness.py  mcp_server.py  metrics.py  mobilitydb.py  (+41 more)
pipeline/tests/: conftest.py  test_access.py  test_accessibility.py  test_adhoc.py  test_adoption.py  test_agencies.py  test_alerts.py  test_anomaly.py  test_atomfeed.py  test_autofix.py  test_badge.py  test_cadence.py  test_canary.py  test_cemv.py  test_cimd.py  test_cli.py  test_cli_skip.py  test_completeness.py  test_conformance.py  test_dataset.py  test_directory.py  test_effort_calibration.py  test_equity.py  test_fares.py  test_fares_v2.py  test_feedapi.py  test_feeddiff.py  test_fetch.py  test_findings_national.py  test_fixlog.py  test_flex.py  test_flex_completeness.py  test_gbfs.py  test_generated_constants.py  test_geo.py  test_google_gate.py  test_gtfs.py  test_infra_handlers.py  test_lint.py  test_liveness.py  (+54 more)
pipeline/tests/e2e/: __init__.py  conftest.py  test_failure.py  test_keyboard.py  test_parity.py  test_routes.py
pipeline/tests/fixtures/golden_site/: agencies.yaml
pipeline/tests/fixtures/golden_site/data/: liveness.json
pipeline/tests/fixtures/golden_site/data/artifacts/: directory.json  index.json
pipeline/tests/fixtures/golden_site/data/rt-health/: yolobus.json
pipeline/tests/fixtures/golden_site/web/: catalog.csv  catalog.json  dataset.json  map.geojson
pipeline/tests/fixtures/golden_site/web/adoption/: index.html
pipeline/tests/fixtures/golden_site/web/agencies/: index.html
pipeline/tests/fixtures/golden_site/web/changes/: feed.xml
pipeline/tests/fixtures/golden_site/web/check/: index.html
pipeline/tests/fixtures/golden_site/web/compare/: index.html
pipeline/tests/fixtures/golden_site/web/equity/: index.html
pipeline/tests/fixtures/golden_site/web/focus/: index.html
pipeline/tests/fixtures/golden_site/web/how-to-read/: index.html
pipeline/tests/fixtures/golden_site/web/leaderboard/: index.html
pipeline/tests/fixtures/golden_site/web/map/: index.html
pipeline/tests/fixtures/golden_site/web/press/: index.html
pipeline/tests/fixtures/golden_site/web/problems/: index.html
pipeline/tests/fixtures/golden_site/web/pulse/: index.html
pipeline/tests/fixtures/golden_site/web/query/: index.html
pipeline/tests/fixtures/golden_site/web/realtime/: index.html
pipeline/tests/fixtures/golden_site/web/routes/: index.html
pipeline/tests/fixtures/golden_site/web/trends/: index.html
pipeline/tests/goldens/: catalog.json  dataset.csv  dataset.json  map.geojson  ntd.json  robots.txt  sitemap.xml
pipeline/tests/goldens/access/: index.html
pipeline/tests/goldens/accessibility/: index.html
pipeline/tests/goldens/adoption/: index.html
pipeline/tests/goldens/agencies/: index.html
pipeline/tests/goldens/agency/barrie-transit/: index.html
pipeline/tests/goldens/agency/barrie-transit/board/: index.html
pipeline/tests/goldens/agency/barrie-transit/brief/: index.html
pipeline/tests/goldens/agency/unitrans/: feed.xml  index.html
pipeline/tests/goldens/agency/unitrans/board/: index.html
pipeline/tests/goldens/agency/unitrans/brief/: index.html
pipeline/tests/goldens/agency/unitrans/fixes/: index.html
pipeline/tests/goldens/agency/yolobus/: index.html
pipeline/tests/goldens/agency/yolobus/board/: index.html
pipeline/tests/goldens/api/v1/: accessibility.json  adoption.json  agencies.parquet  canada-equity.json  ids.json  index.json  problems.json  realtime.json  stats.json  trend.json
pipeline/tests/goldens/check/: index.html
pipeline/tests/goldens/compare/: index.html
pipeline/tests/goldens/crosswalk/: index.html
pipeline/tests/goldens/equity/: index.html
pipeline/tests/goldens/fix/expired_calendar/: index.html
pipeline/tests/goldens/fix/missing_feed_contact_email_and_url/: index.html
pipeline/tests/goldens/focus/: index.html
pipeline/tests/goldens/how-to-read/: index.html
pipeline/tests/goldens/map/: index.html
pipeline/tests/goldens/ntd/: index.html
pipeline/tests/goldens/press/: index.html
pipeline/tests/goldens/problems/: index.html
pipeline/tests/goldens/procurement/: index.html
pipeline/tests/goldens/program/all/: index.html
pipeline/tests/goldens/program/california/: index.html
pipeline/tests/goldens/program/yolo-county/: index.html
pipeline/tests/goldens/pulse/: index.html
pipeline/tests/goldens/query/: index.html
pipeline/tests/goldens/realtime/: index.html
pipeline/tests/goldens/routes/: index.html
pipeline/tests/goldens/tools/: index.html
(+32312 files in other folders)
